<resources>
    <string name="app_name">CryptoNat0r</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_trending">Trending currencies</string>
    <string name="AppName">Cryptonat0r</string>
    <string name="AddCoinSuccesful">Succesfully added new coin!</string>
    <string name="AddCoinFailed">Coin cannot be found!</string>
    <string name="InsertCoinName">Enter new coin name:</string>
    <string name="HourBtnText">Hour</string>
    <string name="LatestDayBtn">Day</string>
    <string name="WeekBtnText">Week</string>strings.xml
    <string name="LatestMonthBtn">Month</string>
    <string name="GraphTimeText">Show price of last</string>
    <string name= "LatestYearBtn">Year</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unbsubscribe</string>
    <string name="TotalVolText">Volume</string>
    <string name="PriceText">Price</string>
    <string name="ChangeFlatText">Change(24H)</string>
    <string name="ChangePctText">%Change(24H)</string>
    <string name="TotalSupplyText">Total Supply:</string>
    <string name="MarketCapText">Market Cap:</string>
    <string name="action_refresh">Refresh</string>
</resources>
