<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.krillinat0r.myapplication.GraphActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="251dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GraphTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="16dp"
        android:text="@string/GraphTimeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <RadioGroup
        android:id="@+id/TimeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/GraphTimeText"
        app:layout_constraintTop_toTopOf="@+id/GraphTimeText">

        <RadioButton
            android:id="@+id/LatestHourBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/HourBtnText"
            app:layout_constraintStart_toEndOf="@+id/GraphTimeText"
            app:layout_constraintTop_toTopOf="@+id/GraphTimeText" />

        <RadioButton
            android:id="@+id/LatestDayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/LatestDayBtn"
            app:layout_constraintStart_toStartOf="@+id/LatestHourBtn"
            app:layout_constraintTop_toBottomOf="@+id/LatestHourBtn" />

        <RadioButton
            android:id="@+id/LatestWeekBtn"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/WeekBtnText"
            app:layout_constraintStart_toStartOf="@+id/LatestDayBtn"
            app:layout_constraintTop_toBottomOf="@+id/LatestDayBtn" />

        <RadioButton
            android:id="@+id/LatestMonthBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/LatestMonthBtn"
            app:layout_constraintStart_toStartOf="@+id/LatestWeekBtn"
            app:layout_constraintTop_toBottomOf="@+id/LatestWeekBtn" />

        <RadioButton
            android:id="@+id/latestYearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/LatestYearBtn"
            app:layout_constraintStart_toStartOf="@+id/LatestYearBtn"
            app:layout_constraintTop_toBottomOf="@+id/LatestYearBtn" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
